--- a/index.html
+++ b/index.html
@@ -416,11 +416,11 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+              <a href="https://github.com/LalitSharma10/E-Commerce-Dashboard/blob/main/frontend/index.html" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">E-Commerce Dashboard</a></h3>
+                <h3 class="heading"><a href="https://github.com/LalitSharma10/E-Commerce-Dashboard/blob/main/frontend/index.htmll">E-Commerce Dashboard</a></h3>
                 <p>The E-Commerce Dashboard App is a powerful tool designed to streamline your online business operations. It provides real-time insights and comprehensive analytics, enabling you to make data-driven decisions, track performance, and optimize your store for maximum profitability and efficiency.
 				</p>
               </div>
@@ -428,11 +428,11 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://github.com/LalitSharma10/MovieApk/blob/main/public/index.html" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Movie Hub</a></h3>
+                <h3 class="heading"><a href="https://github.com/LalitSharma10/MovieApk/blob/main/public/index.html">Movie Hub</a></h3>
                 <p>App lets you quickly find detailed information about any movie. Search for a film and access cast, plot, ratings, reviews, trailers, and more. Perfect for movie enthusiasts and casual viewers, this app enhances your movie-watching experience with rich and up-to-date information.</p>
               </div>
             </div>
@@ -443,11 +443,11 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/LalitSharma10/To-do-List/blob/main/public/index.html" style="background-image: url('images/proj_4.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">To Do List</a></h3>
+				  <h3 class="heading"><a href="https://github.com/LalitSharma10/To-do-List/blob/main/public/index.html">To Do List</a></h3>
 				  <p>Stay organized and boost your productivity with the To-Do List App. This intuitive and user-friendly app helps you manage tasks, set priorities, and achieve your goals effortlessly. Whether for personal use, work, or school, the To-Do List App ensures you stay on top of your responsibilities and make the most of your time.</p>
 				</div>
 			  </div>
