--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/LalitSharma10/To-do-List/blob/main/public/index.html" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/LalitSharma10/To-do-List/blob/main/public/index.html" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
